<?xml version="1.0"?>
<package>
  <name>qtros</name>
  <version>0.1.0</version>
  <description>

     ros_qt_demo

  </description>
  <maintainer email="neal@todo.com">neal</maintainer>
  <author>neal</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>rviz</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>livox_ros_driver</run_depend>
  <run_depend>message_generation</run_depend>


 
</package>
